# api/v2/swagger/swagger.yaml
@@ -552,6 +552,58 @@ paths:
       summary: Get language display names
       tags:
       - locale-api
+  /translation/products/{productName}/multiVersionKey:
+    get:
+      description: Get translation strings of the same key in multiple versions of
+        a product
+      parameters:
+      - description: product name
+        in: path
+        name: productName
+        required: true
+        type: string
+      - description: versions to get translation, separated by commas
+        in: query
+        name: versions
+        required: true
+        type: string
+      - description: locale of translation
+        in: query
+        name: locale
+        required: true
+        type: string
+      - description: component of translation
+        in: query
+        name: component
+        required: true
+        type: string
+      - description: key of translation
+        in: query
+        name: key
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get translation strings of the same key in multiple versions of a product
+      tags:
+      - translation-product-api
   /translation/products/{productName}/versionlist:
     get:
       description: Get available versions of a product
